tests/hopix/hopix/typechecker/bad/option.hopix
type option ('a) =
| None
| Some ('a)

fun unSome (o : option (int), default: int) : bool =
  o ? {
  | (None : option (int)) => default
  | Some (x : int) => x
  }